--- a/eCommerce/src/main/resources/static/web/single-product.html
+++ b/eCommerce/src/main/resources/static/web/single-product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jadusona - eCommerce Baby shop Bootstrap5 Template</title>
+    <title>Origami - eCommerce Clothes shop</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -47,8 +47,8 @@
                     <div class="col mt-10 mb-10 d-none d-md-flex">
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
-                            <p>Welcome to Jadusona</p>
-                            <p>Hotline: <a href="tel:0123456789">0123 456 789</a></p>
+                            <p>Welcome to Origami</p>
+                            <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
                         </div><!-- Header Top Left End -->
                     </div>
 
@@ -136,37 +136,11 @@
                             <nav>
                                 <ul>
                                     <li><a href="index.html">HOME</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home One</a></li>
-                                            <li><a href="index-2.html">Home Two</a></li>
-                                            <li><a href="index-3.html">Home Three</a></li>
-                                            <li><a href="index-box.html">Home Box</a></li>
-                                        </ul>
                                     </li>
                                     <li class="active"><a href="shop.html">SHOP</a>
                                         <ul class="sub-menu">
                                             <li><a href="shop.html">Shop</a></li>
-                                            <li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
-                                            <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
                                             <li class="active"><a href="single-product.html">Single Product</a></li>
-                                            <li><a href="single-product-left-sidebar.html">Single Product Left Sidebar</a></li>
-                                            <li><a href="single-product-right-sidebar.html">Single Product Right Sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">PAGES</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="cart.html">Cart</a></li>
-                                            <li><a href="checkout.html">Checkout</a></li>
-                                            <li><a href="login-register.html">Login & Register</a></li>
-                                            <li><a href="my-account.html">My Account</a></li>
-                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                            <li><a href="404.html">404 Error</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="blog.html">BLOG</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="single-blog.html">Single Blog</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">CONTACT</a></li>
@@ -642,9 +616,9 @@
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
                     <h4 class="title">CONTACT US</h4>
-                    <p>You address will be here<br/> Lorem Ipsum text</p>
-                    <p><a href="tel:01234567890">01234 567 890</a><a href="tel:01234567891">01234 567 891</a></p>
-                    <p><a href="mailto:info@example.com">info@example.com</a><a href="#">www.example.com</a></p>
+                    <p>1425 Los Polvorines <br/> Provincia de Buenos Aires</p>
+                    <p><a href="tel:2995451326">2995451326</a><a href="tel:2994137609">2994137609</a></p>
+                    <p><a href="mailto:help@origami.com">help@origami.com</a><a href="#">www.origami.com</a></p>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
@@ -700,7 +674,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <p class="footer-copyright">© 2022 Jadusona. Made with <i class="fa fa-heart heart-icon"></i> By <a target="_blank" href="https://hasthemes.com">HasThemes</a></p>
+                    <p class="footer-copyright">© 2022 Origami. Made with <i class="fa fa-heart heart-icon"></i> By <a target="_blank" href="https://OrigamiTeam.com">OrigamiTeam</a></p>
                 </div>
             </div>
         </div>
