--- a/eCommerce/src/main/resources/static/web/index.html
+++ b/eCommerce/src/main/resources/static/web/index.html
@@ -165,13 +165,14 @@
         <div class="hero-slider hero-slider-three fix">
 
             <!-- Hero Item Start -->
-            <div class="hero-item" style="background-image: url(assets/images/hero/hero-5.jpg)">
+            <div class="hero-item" style="background-image: url(assets/images/carousel.png)">
 				<div class="container">
 
 					<!-- Hero Content -->
 					<div class="hero-content-2">
 
-						<h1>Trendy & Hot <br> Baby collection 2022</h1>
+						<h1>I love she, what a dress
+							<br> Is very Dificul</h1>
 						<a href="#">SHOP NOW</a>
 
 					</div>
@@ -268,7 +269,7 @@
 									<div class="product-inner">
 
 										<div class="image">
-											<img src="assets/images/product/product-2.jpg" alt="Image">
+											<img src="assets/images/product/img24.jpg" alt="Image">
 
 											<div class="image-overlay">
 												<div class="action-buttons">
@@ -315,7 +316,7 @@
 									<div class="product-inner">
 
 										<div class="image">
-											<img src="assets/images/product/product-3.jpg" alt="Image">
+											<img src="assets/images/product/img24.jpg" alt="Image">
 
 											<div class="image-overlay">
 												<div class="action-buttons">
@@ -329,7 +330,7 @@
 										<div class="content">
 
 											<div class="content-left">
-
+									
 												<h4 class="title"><a href="single-product.html">Smart Shirt</a></h4>
 
 												<div class="ratting">
@@ -444,7 +445,7 @@
 											</div>
 
 										</div>
-
+ 
 									</div>
 								</div>
 
