--- a/eCommerce/src/main/resources/static/web/cart.html
+++ b/eCommerce/src/main/resources/static/web/cart.html
@@ -47,8 +47,8 @@
                     <div class="col mt-10 mb-10 d-none d-md-flex">
                        <!-- Header Top Left Start -->
                        <div class="header-top-left">
-                        <p>Welcome to Origami</p>
-                        <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
+                        <p>Bienvenido a Origami</p>
+                        <a href="tel:2994137609"><i class="fa-brands fa-whatsapp"></i></a>
                     </div><!-- Header Top Left End -->
                     </div>
 
@@ -56,22 +56,18 @@
                         <!-- Header Language Currency Start -->
                         <ul class="header-lan-curr">
 
-                            <li><a href="#">eng</a>
+                            <li><a href="#">es</a>
                                 <ul>
                                     <li><a href="#">english</a></li>
                                     <li><a href="#">spanish</a></li>
-                                    <li><a href="#">france</a></li>
-                                    <li><a href="#">russian</a></li>
-                                    <li><a href="#">chinese</a></li>
                                 </ul>
                             </li>
 
-                            <li><a href="#">$usd</a>
+                            <li><a href="#">$ars</a>
                                 <ul>
-                                    <li><a href="#">pound</a></li>
+                                    <li><a href="#">ars</a></li>
                                     <li><a href="#">dollar</a></li>
-                                    <li><a href="#">euro</a></li>
-                                    <li><a href="#">yen</a></li>
+
                                 </ul>
                             </li>
 
@@ -82,8 +78,8 @@
                         <!-- Header Shop Links Start -->
                         <div class="header-top-right">
 
-                            <p><a href="my-account.html">My Account</a></p>
-                            <p><a href="login-register.html">Register</a><a href="login-register.html">Login</a></p>
+                            <p><a href="my-account.html">Mi cuenta</a></p>
+                            <p><a href="login-register.html">Registrar</a><a href="login-register.html">Ingresar</a></p>
 
                         </div><!-- Header Shop Links End -->
                     </div>
@@ -143,7 +139,7 @@
                                             <li><a href="single-product.html">Single Product</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">CONTACT</a></li>
+                                    <li><a href="contact.html">CONTACTO</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -221,15 +217,34 @@
                             <a href="#">Continue Shopping</a>
                         </div>
                         <div class="cart-coupon">
-                            <h4>Coupon</h4>
-                            <p>Enter your coupon code if you have one.</p>
+                            <h4>Codigo Promocional</h4>
+                            <p>¿Tienes</p>
+
                              <div class="cuppon-form">
                                 <input type="text" placeholder="Coupon code" />
                                 <input type="submit" value="Apply Coupon" />
                              </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-5 col-12 mb-40">
+                    <div class="col-lg-4 colTramitar Pedido">
+                        <div class="cart-total fix">
+                            <h3>Cart Totals</h3>
+                            <table>
+                                <tbody>
+                                    <tr class="cart-subtotal">
+                                        <th>Subtotal</th>
+                                        <td><span class="amount">$306.00</span></td>
+                                    </tr>
+                                    <tr class="order-total">
+                                        <th>Total</th>
+                                        <td>
+                                            <strong><span class="amount">$306.00</span></strong>
+                                        </td>
+                                    </tr>											
+                                </tbody>
+                            </table>
+                            <div class="proceed-to-checkout section mt-30">
+                                <a href="#">Proceed to Checkout</a>
                         <div class="cart-total fix">
                             <h3>Cart Totals</h3>
                             <table>
@@ -305,14 +320,12 @@
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">PRODUCTS</h4>
+                    <h4 class="title">PRODUCTOS</h4>
                     <ul>
                         <li><a href="#">New Arrivals</a></li>
-                        <li><a href="#">Best Seller</a></li>
-                        <li><a href="#">Trendy Items</a></li>
-                        <li><a href="#">Best Deals</a></li>
-                        <li><a href="#">On Sale Products</a></li>
-                        <li><a href="#">Featured Products</a></li>
+                        <li><a href="#">Destacados</a></li>
+                        <li><a href="#">Edicion Limitada</a></li>
+                        <li><a href="#">Outlet</a></li>
                     </ul>
                 </div>
 
@@ -320,11 +333,10 @@
                     <h4 class="title">INFORMATION</h4>
                     <ul>
                         <li><a href="#">About us</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Payment Method</a></li>
+                        <li><a href="#">Terminos y condiciones</a></li>
+                        <li><a href="#">Metodos de pago</a></li>
                         <li><a href="#">Product Warranty</a></li>
-                        <li><a href="#">Return Process</a></li>
-                        <li><a href="#">Payment Security</a></li>
+                        <li><a href="#">Cambios y devoluciones</a></li>
                     </ul>
                 </div>
 
@@ -344,7 +356,7 @@
                     </div><!-- mailchimp-alerts end -->
 
                     <h5>FOLLOW US</h5> 
-                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Google+</a></p>
+                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="https://www.instagram.com/origami.anime/">Instagram</a></p>
 
                 </div>
 
