--- a/eCommerce/src/main/resources/static/web/checkout.html
+++ b/eCommerce/src/main/resources/static/web/checkout.html
@@ -47,8 +47,8 @@
                     <div class="col mt-10 mb-10 d-none d-md-flex">
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
-                            <p>Welcome to Origami</p>
-                            <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
+                            <p>Bienvenido a Origami</p>
+                            <a href="tel:2994137609"><i class="fa-brands fa-whatsapp"></i></a>
                         </div><!-- Header Top Left End -->
                     </div>
 
@@ -56,22 +56,18 @@
                         <!-- Header Language Currency Start -->
                         <ul class="header-lan-curr">
 
-                            <li><a href="#">eng</a>
+                            <li><a href="#">es</a>
                                 <ul>
                                     <li><a href="#">english</a></li>
                                     <li><a href="#">spanish</a></li>
-                                    <li><a href="#">france</a></li>
-                                    <li><a href="#">russian</a></li>
-                                    <li><a href="#">chinese</a></li>
                                 </ul>
                             </li>
 
-                            <li><a href="#">$usd</a>
+                            <li><a href="#">$ars</a>
                                 <ul>
-                                    <li><a href="#">pound</a></li>
+                                    <li><a href="#">ars</a></li>
                                     <li><a href="#">dollar</a></li>
-                                    <li><a href="#">euro</a></li>
-                                    <li><a href="#">yen</a></li>
+
                                 </ul>
                             </li>
 
@@ -82,8 +78,8 @@
                         <!-- Header Shop Links Start -->
                         <div class="header-top-right">
 
-                            <p><a href="my-account.html">My Account</a></p>
-                            <p><a href="login-register.html">Register</a><a href="login-register.html">Login</a></p>
+                            <p><a href="my-account.html">Mi cuenta</a></p>
+                            <p><a href="login-register.html">Registrar</a><a href="login-register.html">Ingresar</a></p>
 
                         </div><!-- Header Shop Links End -->
                     </div>
@@ -143,7 +139,7 @@
                                             <li><a href="single-product.html">Single Product</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">CONTACT</a></li>
+                                    <li><a href="contact.html">CONTACTO</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -192,38 +188,34 @@
 						   <div class="row">
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>First Name*</label>
+								   <label>Nombre</label>
 								   <input type="text" placeholder="First Name">
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>Last Name*</label>
+								   <label>Apellido</label>
 								   <input type="text" placeholder="Last Name">
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>Email Address*</label>
+								   <label>Email</label>
 								   <input type="email" placeholder="Email Address">
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>Phone no*</label>
+								   <label>Telefono</label>
 								   <input type="text" placeholder="Phone number">
 							   </div>
 
-							   <div class="col-12 mb-5">
-								   <label>Company Name</label>
-								   <input type="text" placeholder="Company Name">
-							   </div>
 
 							   <div class="col-12 mb-5">
-								   <label>Address*</label>
+								   <label>Dirección*</label>
 								   <input type="text" placeholder="Address line 1">
 								   <input type="text" placeholder="Address line 2">
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>Country*</label>
+								   <label>Provincia</label>
 								   <select class="nice-select">
 										<option>Bangladesh</option>
 										<option>China</option>
@@ -234,17 +226,12 @@
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>Town/City*</label>
+								   <label>Municipio</label>
 								   <input type="text" placeholder="Town/City">
 							   </div>
 
 							   <div class="col-md-6 col-12 mb-5">
-								   <label>State*</label>
-								   <input type="text" placeholder="State">
-							   </div>
-
-							   <div class="col-md-6 col-12 mb-5">
-								   <label>Zip Code*</label>
+								   <label>Codigo Postal</label>
 								   <input type="text" placeholder="Zip Code">
 							   </div>
 
@@ -363,7 +350,7 @@
 						   <!-- Payment Method -->
 						   <div class="col-12 mb-40">
 
-							   <h4 class="checkout-title">Payment Method</h4>
+							   <h4 class="checkout-title">Metodo de pago</h4>
 
 							   <div class="checkout-payment-method">
 
@@ -458,33 +445,30 @@
             <div class="row mbn-40">
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">CONTACT US</h4>
+                    <h4 class="title">CONTACTO</h4>
                     <p>1425 Los Polvorines <br/> Provincia de Buenos Aires</p>
                     <p><a href="tel:2995451326">2995451326</a><a href="tel:2994137609">2994137609</a></p>
                     <p><a href="mailto:help@origami.com">help@origami.com</a><a href="#">www.origami.com</a></p>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">PRODUCTS</h4>
+                    <h4 class="title">PRODUCTOS</h4>
                     <ul>
                         <li><a href="#">New Arrivals</a></li>
-                        <li><a href="#">Best Seller</a></li>
-                        <li><a href="#">Trendy Items</a></li>
-                        <li><a href="#">Best Deals</a></li>
-                        <li><a href="#">On Sale Products</a></li>
-                        <li><a href="#">Featured Products</a></li>
+                        <li><a href="#">Destacados</a></li>
+                        <li><a href="#">Edicion Limitada</a></li>
+                        <li><a href="#">Outlet</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">INFORMATION</h4>
+                    <h4 class="title">INFORMACION</h4>
                     <ul>
                         <li><a href="#">About us</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Payment Method</a></li>
+                        <li><a href="#">Terminos y condiciones</a></li>
+                        <li><a href="#">Metodos de pago</a></li>
                         <li><a href="#">Product Warranty</a></li>
-                        <li><a href="#">Return Process</a></li>
-                        <li><a href="#">Payment Security</a></li>
+                        <li><a href="#">Cambios y devoluciones</a></li>
                     </ul>
                 </div>
 
@@ -504,7 +488,7 @@
                     </div><!-- mailchimp-alerts end -->
 
                     <h5>FOLLOW US</h5> 
-                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Google+</a></p>
+                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="https://www.instagram.com/origami.anime/">Instagram</a></p>
 
                 </div>
 
