--- a/eCommerce/src/main/resources/static/web/single-product.html
+++ b/eCommerce/src/main/resources/static/web/single-product.html
@@ -661,7 +661,7 @@
                     </div><!-- mailchimp-alerts end -->
 
                     <h5>FOLLOW US</h5> 
-                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Google+</a></p>
+                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="https://www.instagram.com/origami.anime/">Instagram</a></p>
 
                 </div>
 
