--- a/eCommerce/src/main/resources/static/web/index.html
+++ b/eCommerce/src/main/resources/static/web/index.html
@@ -140,7 +140,7 @@
                                     <li><a href="shop.html">SHOP</a>
                                         <ul class="sub-menu">
                                             <li><a href="shop.html">Shop</a></li>
-											<li><a href="single-product.html">Single Product</a></li>
+											<li><a href="single-product.html">Cosplay</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">CONTACT</a></li>
@@ -222,7 +222,7 @@
 									<div class="product-inner">
 
 										<div class="image">
-											<img src="assets/images/product/product-1.jpg" alt="Image">
+											<img src="./assets/images/product/productoCamisaOnePeace.jpg" alt="Image">
 
 											<div class="image-overlay">
 												<div class="action-buttons">
