--- a/eCommerce/src/main/resources/static/web/single-product.html
+++ b/eCommerce/src/main/resources/static/web/single-product.html
@@ -48,7 +48,8 @@
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
                             <p>Welcome to Origami</p>
-                            <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
+                            <a href="tel:2994137609"></a>
+                            <i class="fa-brands fa-whatsapp"><a href="tel:2994137609"></a></i>
                         </div><!-- Header Top Left End -->
                     </div>
 
