--- a/eCommerce/src/main/resources/static/web/contact.html
+++ b/eCommerce/src/main/resources/static/web/contact.html
@@ -48,7 +48,7 @@
                         <!-- Header Top Left Start -->
                         <div class="header-top-left">
                             <p>Welcome to Origami</p>
-                            <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
+                            <p>Hotline: <a href="tel:11-57199026">11-57199026</a></p>
                         </div><!-- Header Top Left End -->
                     </div>
 
@@ -159,7 +159,7 @@
     </div><!-- Header Section End -->
 
     <!-- Page Banner Section Start -->
-    <div class="page-banner-section section" style="background-image: url(assets/images/hero/hero-1.jpg)">
+    <div class="page-banner-section section" style="background-image: url(assets/images/hero/imgPortadaContact.jpg)">
         <div class="container">
             <div class="row">
                 <div class="page-banner-content col">
@@ -182,19 +182,19 @@
 
                <div class="contact-info-wrap col-md-6 col-12 mb-40">
                    <h3>Get in Touch</h3>
-                   <p>Jadusona is the best theme for  elit, sed do eiusmod tempor dolor sit ame  tse ctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et lorna aliquatd minim veniam,</p>
+                 <p>Origami has a wide variety of products that you can see in our official store. Also if you are a premium customer you will have access to all the new catalog that arrives every week. Be part of the biggest otaku community.</p>
                    <ul class="contact-info">
                        <li>
                            <i class="fa fa-map-marker"></i>
-                           <p>256, 1st AVE, You address <br>will be here</p>
+                           <p>Galery Kuska 1225 Rosario - Santa Fe<br>will be here</p>
                        </li>
                        <li>
                            <i class="fa fa-phone"></i>
-                           <p><a href="#">+01 235 567 89</a><a href="#">+01 235 286 65</a></p>
+                           <p><a href="#">+54 11 5719 9026</a><a href="#">+54 11 2359 2865</a></p>
                        </li>
                        <li>
                            <i class="fa fa-globe"></i>
-                           <p><a href="#">info@example.com</a><a href="#">www.example.com</a></p>
+                           <p><a href="#">OrigamiTeam@origami.com</a><a href="#">www.origami.com</a></p>
                        </li>
                    </ul>
                </div>
