--- a/eCommerce/src/main/resources/static/web/index.html
+++ b/eCommerce/src/main/resources/static/web/index.html
@@ -1682,7 +1682,7 @@
             <div class="feature-wrap row row-10 mbn-20">
 
                 <div class="col-lg-4 col-md-6 col-12 mb-20">
-                    <div class="feature-item-2 text-center bg-theme-two" style="background-image: url(assets/images/feature/feature-1-bg.png)">
+                    <div class=" text-center ">
 
                         <div class="icon"><img src="assets/images/feature/feature-1.png" alt="Image"></div>
                         <div class="content">
@@ -1694,7 +1694,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-12 mb-20">
-                    <div class="feature-item-2 text-center bg-theme-two" style="background-image: url(assets/images/feature/feature-2-bg.png)">
+                    <div class=" text-center ">
 
                         <div class="icon"><img src="assets/images/feature/feature-2.png" alt="Image"></div>
                         <div class="content">
@@ -1706,7 +1706,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-12 mb-20">
-                    <div class="feature-item-2 text-center bg-theme-two" style="background-image: url(assets/images/feature/feature-3-bg.png)">
+                    <div class=" text-center ">
 
                         <div class="icon"><img src="assets/images/feature/feature-3.png" alt="Image"></div>
                         <div class="content">
@@ -1725,46 +1725,9 @@
     <div class="blog-section section section-padding pt-0">
         <div class="container">
             <div class="row mbn-40">
-
-                <div class="col-lg-6 col-12 mb-40">
-                    <div class="blog-item">
-                        <div class="image-wrap">
-                            <h4 class="date">May <span>25</span></h4>
-                            <a class="image" href="single-blog.html"><img src="assets/images/blog/blog-3.jpg" alt="Image"></a>
-                        </div>
-                        <div class="content">
-                            <h4 class="title"><a href="single-blog.html">Lates and new Trens for baby fashion</a></h4>
-                            <div class="desc">
-                                <p>Jadusona is one of the most of a exclusive Baby shop in the</p>
-                            </div>
-                            <ul class="meta">
-                                <li><a href="#"><img src="assets/images/blog/blog-author-1.jpg" alt="Blog Author">Muhin</a></li>
-                                <li><a href="#">25 Likes</a></li>
-                                <li><a href="#">05 Views</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-12 mb-40">
-                    <div class="blog-item">
-                        <div class="image-wrap">
-                            <h4 class="date">May <span>20</span></h4>
-                            <a class="image" href="single-blog.html"><img src="assets/images/blog/blog-4.jpg" alt="Image"></a>
-                        </div>
-                        <div class="content">
-                            <h4 class="title"><a href="single-blog.html">New Collection New Trend all New Style</a></h4>
-                            <div class="desc">
-                                <p>Jadusona is one of the most of a exclusive Baby shop in the</p>
-                            </div>
-                            <ul class="meta">
-                                <li><a href="#"><img src="assets/images/blog/blog-author-2.jpg" alt="Blog Author">Takiya</a></li>
-                                <li><a href="#">25 Likes</a></li>
-                                <li><a href="#">05 Views</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+				
+				<!-- SnapWidget -->
+				<iframe src="https://snapwidget.com/embed/1000732" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px"></iframe>
 
             </div>
         </div>
@@ -1777,29 +1740,24 @@
                 <div class="brand-slider">
 
                     <div class="brand-item col">
-                        <img src="assets/images/brands/brand-1.png" alt="Image">
+                        <img src="assets/images/brands/Dragon_Ball_Super.png" alt="Image">
                     </div>
 
                     <div class="brand-item col">
-                        <img src="assets/images/brands/brand-2.png" alt="Image">
+                        <img src="assets/images/brands/Jujutsu_Kaisen_logo_in_Japan.png" alt="Image">
                     </div>
 
                     <div class="brand-item col">
-                        <img src="assets/images/brands/brand-3.png" alt="Image">
+                        <img src="assets/images/brands/My_Hero_Academia_logo_in_Japan_20150106.png" alt="Image">
                     </div>
 
                     <div class="brand-item col">
-                        <img src="assets/images/brands/brand-4.png" alt="Image">
+                        <img src="assets/images/brands/pngwing.com.png" alt="Image">
                     </div>
 
                     <div class="brand-item col">
-                        <img src="assets/images/brands/brand-5.png" alt="Image">
+                        <img src="assets/images/brands/riot-games-logo.png" alt="Image">
                     </div>
-
-                    <div class="brand-item col">
-                        <img src="assets/images/brands/brand-6.png" alt="Image">
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -1811,42 +1769,42 @@
             <div class="row">
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">CONTACT US</h4>
+                    <h4 class="title">CONTACTO</h4>
                     <p>1425 Los Polvorines <br/> Provincia de Buenos Aires</p>
                     <p><a href="tel:2995451326">2995451326</a><a href="tel:2994137609">2994137609</a></p>
                     <p><a href="mailto:help@origami.com">help@origami.com</a><a href="#">www.origami.com</a></p>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">PRODUCTS</h4>
+                    <h4 class="title">PRODUCTOS</h4>
                     <ul>
-                        <li><a href="#">New Arrivals</a></li>
-                        <li><a href="#">Best Seller</a></li>
-                        <li><a href="#">Trendy Items</a></li>
-                        <li><a href="#">Best Deals</a></li>
-                        <li><a href="#">On Sale Products</a></li>
-                        <li><a href="#">Featured Products</a></li>
+                        <li><a href="#">Nuevos Articulos</a></li>
+                        <li><a href="#">Más vendidos</a></li>
+                        <li><a href="#">Items de moda</a></li>
+                        <li><a href="#">algo</a></li>
+                        <li><a href="#">Productos en venta</a></li>
+                        <li><a href="#">Productos Destacados</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
-                    <h4 class="title">INFORMATION</h4>
+                    <h4 class="title">INFORMACIÓN</h4>
                     <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Payment Method</a></li>
-                        <li><a href="#">Product Warranty</a></li>
-                        <li><a href="#">Return Process</a></li>
-                        <li><a href="#">Payment Security</a></li>
+                        <li><a href="#">Sobre Nosotros</a></li>
+                        <li><a href="#">Terminos y condiciones</a></li>
+                        <li><a href="#">Métodos de pago</a></li>
+                        <li><a href="#">Garantías</a></li>
+                        <li><a href="#">Devoluciones</a></li>
+                        <li><a href="#">Seguridad de los pagos</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
                     <h4 class="title">NEWSLETTER</h4>
-                    <p>Subscribe our newsletter and get all update of our product</p>
+                    <p<>Suscribete a nuestro newsletter para mantenerte actualizado sobre nuestros productos!</p>
 
                     <form id="mc-form" class="mc-form footer-subscribe-form">
-                        <input id="mc-email" autocomplete="off" placeholder="Enter your email here" name="EMAIL" type="email">
+                        <input id="mc-email" autocomplete="off" placeholder="Ingrese su email aquí" name="EMAIL" type="email">
                         <button id="mc-submit"><i class="fa fa-paper-plane-o"></i></button>
                     </form>
                     <!-- mailchimp-alerts Start -->
@@ -1856,8 +1814,8 @@
                         <div class="mailchimp-error"></div><!-- mailchimp-error end -->
                     </div><!-- mailchimp-alerts end -->
 
-                    <h5>FOLLOW US</h5> 
-                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Google+</a></p>
+                    <h5>SÍGUENOS!</h5> 
+                    <p class="footer-social"><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="https://www.instagram.com/origami.anime/">Instagram</a></p>
 
                 </div>
 
@@ -1870,7 +1828,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <p class="footer-copyright">© 2022 Origami. Made with <i class="fa fa-heart heart-icon"></i> By <a target="_blank" href="https://OrigamiTeam.com">OrigamiTeam</a></p>
+                    <p class="footer-copyright">© 2022 Origami. Hecho con <i class="fa fa-heart heart-icon"></i> By <a target="_blank" href="https://OrigamiTeam.com">OrigamiTeam</a></p>
                 </div>
             </div>
         </div>
